feat(projects): configure pipeline steps
